--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
     "deno.enable": true,
     "deno.lint": true,
-    "deno.unstable": true,
-    "deno.config": "./deno.jsonc"
+    "deno.unstable": true
 }
